# sam

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RESUMEN_CAMBIOS.md  SAM.sql  VERIFICACION_CAMBIOS.md  apply_sp.py  diferencia_staged.txt  diff.txt  diff_develop.txt  env_to_read.txt  migrate_sam.py  package-lock.json  plan_to_read.txt  pyproject.toml  pyproject.toml.backup  requirements.txt  run_lanzador.py  setup.py  task_to_read.txt  test.txt  test_config.py  test_data.py  test_keys.py  test_keys_v2.py  test_lanzador_output.txt  test_output.txt  test_web_output.txt  update_stored_procedure.sql  validate_migration.py
.agent/rules/: alerts.md  commit-convention.md  sam-protocol.md  sql-validation.md
.agent/workflows/: commit.md  export-db.md  lint.md  logs.md  new-sp.md  status.md  sync.md  test.md
balanceador/: __init__.py  run_balanceador.py
balanceador/clients/: __init__.py  mysql_client.py
balanceador/database/: historico_client.py
balanceador/service/: __init__.py  balanceo.py  cooling_manager.py  main.py
callback/: run_callback.py
callback/service/: main.py
common/database/: sql_client.py
common/utils/: config_manager.py  logging_setup.py  mail_client.py
database/: README.md  export_db_ssms_like.ps1  sql_client.py
database/functions/: dbo_fn_diagramobjects.sql
database/migrations/: 005_add_fecha_inicio_real.sql  006_add_critical_executions_config.sql  007_increase_callback_info_size.sql  008_create_view_auditoria.sql  config_improvements.sql
database/procedures/: dbo_ActualizarAsignacionesRobot.sql  dbo_ActualizarConfiguracion.sql  dbo_ActualizarEquiposProgramacion.sql  dbo_ActualizarEstadoEquipo.sql  dbo_ActualizarEstadoProgramacion.sql  dbo_ActualizarPool.sql  dbo_ActualizarProgramacionCompleta.sql  dbo_ActualizarProgramacionSimple.sql  dbo_ActualizarRobotDetalle.sql  dbo_ActualizarRobotEstado.sql  dbo_AnalisisDispersionRobot.sql  dbo_AnalisisPatronesTemporales.sql  dbo_AnalisisTasasExito.sql  dbo_AnalisisTiemposEjecucionRobots.sql  dbo_AnalisisTiemposEjecucionRobots_MEJORADO.sql  dbo_AnalisisUtilizacionRecursos.sql  dbo_Analisis_Balanceador.sql  dbo_Analisis_Callbacks.sql  dbo_Analisis_Dispersion.sql  dbo_Analisis_Latencia.sql  dbo_Analisis_PatronesTemporales.sql  dbo_Analisis_TasasExito.sql  dbo_Analisis_TiemposEjecucion.sql  dbo_Analisis_UtilizacionRecursos.sql  dbo_AsignarRecursosAPool.sql  dbo_CrearMapeo.sql  (+54 more)
docs/: Documentación del Modelo de Datos y Reglas de Negocio.md  Guia de Arquitectura y Desarrollo.json  Servicio Lanzador - Proyecto SAM.docx  audit_report.md  balanceador.feature  cache_system.md  callback.feature  checklist_estandarizacion.md  checklist_pruebas_estandarizacion.md  estándar específico para el servicio web de ReactPy.json  lanzador.feature  migration_mapping.md  plan_estandarizacion_reactpy.md  proximos_pasos.json  tree-package.txt  verificacion_fase3.md
interfaz_web/: run_interfaz_web.py
lanzador/: .env.example  .gitignore  README.md  run_callback_server.py  run_lanzador.py
migrations/: migracion_renombrar_claves.sql  migracion_renombrar_claves_v2.sql
scripts/: SAM.sql  alter_cargar_programacion_diaria.sql  alter_cargar_programacion_especifica.sql  alter_cargar_programacion_mensual.sql  alter_cargar_programacion_semanal.sql  apply_config_migration.py  apply_sp_patrones.py  apply_sp_tasas_exito.py  apply_sp_tiempos.py  apply_sp_utilizacion.py  check_env_naming.py  check_schema.py  check_version.py  check_version_increment.py  config_nssm_timeout_shutdown.bat  create_actualizar_programacion_completa.sql  create_eliminar_programacion_completa.sql  db_tools.py  desinstalar_servicio.ps1  desinstalar_servicio_balanceador.ps1  desinstalar_servicio_callback.ps1  desinstalar_servicio_lanzador.ps1  ejecuta_conciliador.py  inspect_callback.py  instalar_servicio_balanceador.ps1  instalar_servicio_callback.ps1  instalar_servicio_lanzador.ps1  install_services.ps1  modify_asignaciones_table.sql  normalize_config.py  run_sql_script.py  verificar_fix_hooks.py  verify_config_api.py  verify_config_precedence.py  verify_tiempos_dashboard.py
service/: callback_server.py  conciliador.py
src/: tailwind.config.js
tests/: Script de Prueba para BR-07 y BR-08.py  conftest.py  probar_sincronizacion.py  test_BR01.sql  test_audit_log.py  test_balanceador.py  test_cache.py  test_callback.py  test_common.py  test_conciliador.py  test_config_dynamic.py  test_desplegador_bot_input.py  test_ejecuciones_logic.py  test_lanzador.py  test_path_resolution.py  test_simulador_alertas.py  test_unlock_execution.py  test_web.py
utils/: config.py  mail_client.py
(+323 files in other folders)
