[project]
name = "sam"
version = "0.1.0"
description = "Sistema Automático de Robots - RPA Orchestration"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "pyodbc>=5.0.0",
    "python-dotenv>=1.0.0",
    "urllib3>=2.0.0",
    "reactpy[fastapi]>=1.0.0",
    "schedule>=1.2.2",
    "reactpy-router>=0.0.1",
    "pytz>=2025.2",
    "python-dateutil>=2.9.0.post0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --cov=sam --cov-report=term-missing"
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py38"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[project.scripts]
sam-lanzador = "sam.lanzador.run_lanzador:main"
sam-balanceador = "sam.balanceador.run_balanceador:main"
sam-callback = "sam.callback.run_callback:main"
sam-web = "sam.web.run_dashboard:main"
