[project]
name = "sam"
dynamic = ["version"]
description = "Sistema Automático de Robots - RPA Orchestration"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "pyodbc>=5.0.0",
    "python-dotenv>=1.0.0",
    "urllib3>=2.0.0",
    "schedule>=1.2.2",
    "pytz>=2025.2",
    "python-dateutil>=2.9.0.post0",
    "reactpy[fastapi]>=1.0.0",
    "reactpy-router>=2.0.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
addopts = "-v --cov=sam --cov-report=term-missing"
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[project.scripts]
sam-lanzador = "sam.lanzador.run_lanzador:main"
sam-balanceador = "sam.balanceador.run_balanceador:main"
sam-callback = "sam.callback.run_callback:main"
sam-web = "sam.web.run_dashboard:main"

[tool.hatch.version]
path = "src/sam/__init__.py"

[dependency-groups]
dev = ["pre-commit>=3.5.0"]
